Update and rename quiz.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz App</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/quiz.css">
+  <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
   <header class="header">
@@ -83,6 +83,6 @@
   <p>Contact us: support@supremequizzes.com</p>
   <a href="terms.html">Terms & Conditions</a> | <a href="privacy.html">Privacy Policy</a> | <a href="#">Cookies Settings</a>
 </footer>
-  <script src="../js/quiz.js"></script>
+  <script src="quiz.js"></script>
 </body>
 </html>
